--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
           Open Me!
         </a>
       </section>
+      <section class="preview">
+        <img src="Images/Challenge2.png" alt="testimonials-grid-challenge" />
+        <a
+          href="https://nextjs-dashboard-one-xi-98.vercel.app/dashboard"
+          target="_blank"
+        >
+          Open Me!
+        </a>
+      </section>
+      
     </section>
   </body>
   <footer>
