--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           href="https://nextjs-dashboard-one-xi-98.vercel.app/dashboard"
           target="_blank"
         >
-          Open Me!
+          Open Next.js!
         </a>
       </section>
       
